--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
 <div class="container-top">
-    <img  class="cloud-top"src="images/cloud.png" alt=cloid-img"">
+    <img  class="cloud-top"src="images/cloud.png" alt="">
   <h1> I'am Neeraj Reddy</h1>
   <p> Software Developer</p>
- <img class="cloud-buttom" src="images/cloud.png" alt=cloud-img"">
-      <img  src="images/mountain.png" alt=mountain-img"">
+ <img class="cloud-buttom" src="images/cloud.png" alt="">
+      <img  src="images/mountain.png" alt="">
 </div>
 <div class="middle-container">
   <div class="profile">
